Add mgo to project
